[metadata]
name = python-package
version = attr: python_package._version.__version__
description = short description
long_description = file: README.md
license = MIT Licence
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_sage = False
include_package_data = True
packages = find:
install_requires =

[options.package_data]
* = *.json

[options.packages.find]
exclude =
    tests
    tests.*

